# witty

./: .gitignore  Cargo.toml  LICENSE  README.md  build_cpp.sh  pyproject.toml
crates/witty-app/: Cargo.toml
crates/witty-app/src/: logging.rs  main.rs  real_tui_smoke.rs  update_state.rs  window.rs
crates/witty-app/templates/: wittyrc
crates/witty-app/tests/: fish_prompt_probe.rs
crates/witty-core/: Cargo.toml
crates/witty-core/examples/: scrollback_perf.rs
crates/witty-core/src/: basic_terminal.rs  keyboard.rs  lib.rs  mouse.rs
crates/witty-gateway/: Cargo.toml
crates/witty-gateway/src/: lib.rs  main.rs
crates/witty-launcher/: Cargo.toml
crates/witty-launcher/src/: lib.rs  main.rs
crates/witty-plugin-api/: Cargo.toml
crates/witty-plugin-api/src/: lib.rs
crates/witty-plugin-api/wit/: README.md  witty-plugin.wit
crates/witty-plugin-wasm/: Cargo.toml
crates/witty-plugin-wasm/fixtures/guest-plugin/: Cargo.toml
crates/witty-plugin-wasm/fixtures/guest-plugin/src/: lib.rs
crates/witty-plugin-wasm/src/: lib.rs
crates/witty-render-wgpu/: Cargo.toml
crates/witty-render-wgpu/examples/: scrollback_planner_perf.rs
crates/witty-render-wgpu/src/: background_image.wgsl  lib.rs  rect_static.wgsl
crates/witty-transport/: Cargo.toml
crates/witty-transport/src/: lib.rs  local_pty.rs  openssh.rs
crates/witty-ui/: Cargo.toml
crates/witty-ui/src/: command_palette.rs  ime.rs  lib.rs  plugin_host.rs  search.rs  shell_integration.rs
crates/witty-web/: Cargo.toml
crates/witty-web/assets/fonts/: README.md
crates/witty-web/assets/licenses/: dejavu-fonts.txt
crates/witty-web/src/: lib.rs
crates/witty-web/static/: app.js  index.html
docs/: README.md  aibookmx-native-opengl-validation-plan.md  browser-alt-screen-runtime-smoke.md  browser-canvas-entry-plan.md  browser-command-palette-shell.md  browser-document-title-bridge.md  browser-gateway-shell-adapter-plan.md  browser-gateway-shell-loopback.md  browser-gateway-websocket-plan.md  browser-gateway-websocket-smoke.md  browser-real-tui-product-smoke.md  browser-resize-dpi.md  browser-runtime-smoke-harness.md  browser-selection-clipboard-plan.md  browser-transport-boundary.md  browser-wasm-preflight.md  browser-webgpu-glyphon-batch-budget.md  bundled-font-selection.md  gateway-launcher-spike.md  gateway-protocol-backpressure.md  gateway-security-hardening.md  gateway-session-token-launch-flow.md  gui-screenshot-regression-harness.md  headless-renderer-test-harness-plan.md  host-owned-import-ui-plan.md  htop-btop-redraw-smoke.md  launcher-browser-smoke-hardening.md  launcher-lifecycle-exit.md  launcher-manifest-serving.md  launcher-open-browser-flag.md  launcher-product-mode-decision.md  launcher-profile-picker-plan.md  launcher-session-config-one-use.md  linux-opengl-desktop-entry.md  native-cursor-blink-state.md  native-fullscreen-multimonitor-debug.md  native-incremental-smoke-frame-stats.md  native-opengl-backend-policy.md  native-opengl-window-startup.md  native-opengl-xvfb-probe-result.md  (+130 more)
docs/integration/: debugging-segfault.md  platform-limitation-discovery.md  rebuild-ghostty-debug.md  root-cause-analysis.md
docs/plans/: libghostty-vt-integration-plan.md  phase-1-checklist-pyside6.md  phase-1-checklist.md  phase1-complete-summary.md  prototype-verification-results.md  qt6-integration-plan.md  vte-rust-implementation-plan.md
docs/technical/: gtk-to-qt-migration-analysis.md  libghostty-analysis.md  surface-opengl-relationship.md  terminal-solutions-comparison.md
packaging/linux/: dev.witty.Witty.OpenGL.desktop  dev.witty.Witty.desktop
scripts/: build-witty-web-dist.sh  build-witty-web-smoke.sh  capture-gui-diagnostics.sh  generate-icons.sh  generate_icon.py  install-witty-local.sh  run-keyboard-protocol-live-compare-matrix.sh  run-witty-native-opengl.sh  run-witty-web-real-tui-smoke.mjs  run-witty-web-real-tui-smoke.sh  run-witty-web-smoke.mjs  run-witty-web-smoke.sh
src/cpp/: CMakeLists.txt  main.cpp  main.qml
src/witty/: __init__.py
src/witty/ghostty/: __init__.py  app.py  bindings.py  callbacks.py  surface.py
src/witty/gui/: __init__.py  main.qml  terminal_widget.py
tests/: debug_gdb.sh  test_basic_load.py  test_correct_binding.py  test_ctypes.py  test_debug_library.py  test_full_callbacks.py  test_ghostty_binding.py  test_ghostty_vt.py  test_load_library.py  test_step_by_step.py  test_terminal_widget.py  test_updated_bindings.py  test_wrappers.py
