[workspace]
members = [
    "crates/witty-app",
    "crates/witty-core",
    "crates/witty-gateway",
    "crates/witty-launcher",
    "crates/witty-plugin-api",
    "crates/witty-plugin-wasm",
    "crates/witty-render-wgpu",
    "crates/witty-transport",
    "crates/witty-ui",
    "crates/witty-web",
]
resolver = "2"

[workspace.package]
authors = ["Miles Xu"]
edition = "2021"
license = "MIT OR Apache-2.0"
publish = false
rust-version = "1.95"
version = "0.1.0"

[workspace.dependencies]
anyhow = "1.0"
arboard = "3.6.1"
base64 = "0.22"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.9"
witty-core = { path = "crates/witty-core" }
witty-gateway = { path = "crates/witty-gateway" }
witty-launcher = { path = "crates/witty-launcher" }
witty-plugin-api = { path = "crates/witty-plugin-api" }
witty-plugin-wasm = { path = "crates/witty-plugin-wasm" }
witty-render-wgpu = { path = "crates/witty-render-wgpu" }
witty-transport = { path = "crates/witty-transport" }
witty-ui = { path = "crates/witty-ui" }
thiserror = "2.0"
bytemuck = { version = "1.24", features = ["derive"] }
console_error_panic_hook = "0.1"
glyphon = "0.11"
getrandom = "0.3"
pollster = "0.4"
portable-pty = "0.9"
regex = "1.10"
tungstenite = "0.29"
unicode-normalization = "0.1"
unicode-segmentation = "1.13"
unicode-width = "0.2"
wgpu = "29.0.1"
winit = "0.30"
vte = "0.15"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
wasmtime = { version = "45.0.0", default-features = false, features = ["anyhow", "component-model", "cranelift", "runtime", "std"] }
web-sys = "0.3"
wit-parser = { version = "0.251", default-features = false, features = ["std"] }
