[package]
name = "witty-app"
description = "Smoke-test binary for the Witty Rust prototype."
authors.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
rust-version.workspace = true
version.workspace = true

[[bin]]
name = "witty"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
arboard.workspace = true
pollster.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
tracing.workspace = true
tracing-appender.workspace = true
tracing-log.workspace = true
tracing-subscriber.workspace = true
witty-core.workspace = true
witty-launcher.workspace = true
witty-plugin-api.workspace = true
witty-plugin-wasm.workspace = true
witty-render-wgpu.workspace = true
witty-transport.workspace = true
witty-ui.workspace = true
winit.workspace = true
