[package]
name = "witty-gateway"
description = "Native WebSocket gateway between browser terminal sessions and local PTYs."
authors.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
anyhow.workspace = true
witty-core.workspace = true
witty-transport.workspace = true
tungstenite.workspace = true
