[package]
name = "witty-render-wgpu"
description = "Renderer-facing frame planning for the future wgpu terminal renderer."
authors.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
anyhow.workspace = true
bytemuck.workspace = true
glyphon.workspace = true
witty-core.workspace = true
unicode-width.workspace = true
wgpu.workspace = true

[target.'cfg(target_arch = "wasm32")'.dependencies]
web-sys = { workspace = true, features = ["HtmlCanvasElement", "Performance", "Window"] }
