[package]
name = "witty-ui"
description = "Application shell composition for terminal sessions."
authors.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
witty-core.workspace = true
witty-plugin-api.workspace = true
witty-render-wgpu.workspace = true
witty-transport.workspace = true

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
witty-plugin-wasm.workspace = true
